# gfxbox2

./: .clang-tidy  .clangd  .cproject  .gitignore  .project  CMakeLists.txt  COPYING  README.md  Setup.cmake
cmake/modules/: clangd.in  version.cpp.in
doc/: Projekt_Pi.odt  Sonnensystem.odt  gravity.ods
doc/horizon-jpl/: README.txt  fetch-all.sh
doc/horizon-jpl/data-20240101/: horizons-01-mercury.cmd  horizons-01-mercury.res  horizons-02-venus.cmd  horizons-02-venus.res  horizons-03-earth.cmd  horizons-03-earth.res  horizons-04-mars.cmd  horizons-04-mars.res  horizons-05-jupiter.cmd  horizons-05-jupiter.res  horizons-06-saturn.cmd  horizons-06-saturn.res  horizons-07-uranus.cmd  horizons-07-uranus.res  horizons-08-neptun.cmd  horizons-08-neptun.res  horizons-09-pluto.cmd  horizons-09-pluto.res
examples/: CMakeLists.txt  Panzer.cpp  Tron.cpp  canonball.cpp  canonball.html  car.cpp  example01.cpp  example01.html  freefall01.cpp  freefall01.html  freefall01a.cpp  freefall01b.cpp  panzer.cpp  piviz.cpp  piviz.html  pong01.cpp  pong01.html  sandbox01.cpp  sandbox01.html  solarsystem.cpp  solarsystem.html  solarsystem_cbodies.hpp  spaceinv01.cpp  spaceinv01.html  spacewars.cpp  spacewars.html  sunsystem.cpp  tron.cpp  tron.html
examples/funcdraw/: CMakeLists.txt  funcdraw.cmd01.txt  funcdraw.cpp  funcdraw.html  infix_calc.cpp  infix_calc.hpp  infix_calc_parser.yy  infix_calc_scanner1.ll  infix_calc_scanner_warnings.hpp  rpn_calc.cpp  rpn_calc.hpp
examples/pacman/: CMakeLists.txt  README.md  game.cpp  game.hpp  ghost.cpp  maze.cpp  maze.hpp  pacman.cpp  pacman.html  utils.cpp  utils.hpp
include/: physics.hpp  tron.hpp
include/jau/: file_util.hpp  float_si_types.hpp  fraction_type.hpp  int_types.hpp  utils.hpp
include/pixel/: Highscore.hpp  audio.hpp  jau_unit.hpp  jau_utils.hpp  pixel.hpp  pixel2f.hpp  pixel2i.hpp  pixel3d.hpp  pixel3f.hpp  pixel4f.hpp  unit.hpp  utils.hpp  version.hpp
scripts/: atoogg.sh  bmps_to_mp4.sh  build-wasm.sh  build.sh  move-core.sh  rebuild-wasm.sh  rebuild.sh  run_minihttpd.sh  setup-emscripten.sh  setup-machine-arch.sh
src/: CMakeLists.txt  audio.cpp  gfxbox2.pc.cmake  jau_file_util.cpp  jau_utils.cpp  pixel.cpp  sdl_subsys.cpp  sfml_subsys.cpp  utils.cpp
